@@ -12,5 +12,3 @@ warn_cmd_mismatch_paramnum: yes
 check_cmdcount: 8192
 
 check_gotocount: 512
-
-max_eventtimer_length: 32
